codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_exec_cell_is_finalized_after_budget_abort.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: rendered
---
• Tested cargo test
  └ Goal budget reached - the turn was stopped.

■ Goal budget reached - the turn was stopped.
