codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_exec_cell_is_finalized_after_error.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: rendered
---
• Waited sleep 5
  └ stream failed while waiting for tool result

■ stream failed while waiting for tool result
