codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_mcp_tool_call_is_finalized_after_error.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: rendered
---
• Used github.search({"query":"status row"})
  └ Error: stream failed while waiting for MCP result

■ stream failed while waiting for MCP result
