codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_mcp_tool_call_is_finalized_after_interrupt.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: rendered
---
• Used github.search({"query":"status row"})
  └ Error: Conversation interrupted.

■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
